--- a/css/style.css
+++ b/css/style.css
@@ -705,10 +705,10 @@
             letter-spacing: 1px;
             box-shadow: none;
         }
-
+        
         .footer .copyright {
             padding: 25px 0;
-            font-size: 14px;
+            font-size: 10px !important;
             border-top: 1px solid rgba(256, 256, 256, .1);
         }
 
